Dark theme enables(works with system theme)

--- a/uiTest/src/app.css
+++ b/uiTest/src/app.css
@@ -2,7 +2,7 @@
 
 @plugin 'flowbite/plugin';
 
-@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @theme {
   /* Primary Color - Based on #648DDB */
